--- a/css/styles.css
+++ b/css/styles.css
@@ -123,3 +123,24 @@ body {
 .row .col-3-of-4 {
   width: calc( 3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem);
 }
+
+.row .col-1-of-5 {
+  width: calc((100% - 4 * 6rem) / 5);
+}
+
+.row .col-2-of-5 {
+  width: calc( 2 * ((100% - 4 * 6rem) / 5) + 6rem);
+}
+
+.row .col-3-of-5 {
+  width: calc( 3 * ((100% - 4 * 6rem) / 5) + 2 * 6rem);
+}
+
+.row .col-4-of-5 {
+  width: calc( 4 * ((100% - 4 * 6rem) / 5) + 3 * 6rem);
+}
+
+.card {
+  background-color: orangered;
+  height: 10rem;
+}
