--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -3,16 +3,16 @@
   margin: 0 auto;
 
   &:not(:last-child) {
-    margin-bottom: $gutter-vertical;
+    margin-bottom: $gutter-vertical-small;
 
     @include respond(tab-port) {
-      margin-bottom: $gutter-vertical-small;
+      margin-bottom: $gutter-vertical-tiny;
     }
   }
 
   @include respond(tab-port) {
-    max-width: 50rem;
-    padding: 0 3rem;
+    max-width: 90%;
+    padding: 0 1rem;
   }
 
   @include clearfix;
@@ -23,13 +23,13 @@
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
 
-      @include respond(tab-port) {
+      @include respond(phone) {
         margin-right: 0;
         margin-bottom: $gutter-vertical-small;
       }
     }
 
-    @include respond(tab-port) {
+    @include respond(phone) {
       width: 100% !important;
     }
   }
