--- a/css/styles.css
+++ b/css/styles.css
@@ -57,19 +57,19 @@ body {
 }
 
 .row:not(:last-child) {
-  margin-bottom: 8rem;
+  margin-bottom: 6rem;
 }
 
 @media only screen and (max-width: 56.25em) {
   .row:not(:last-child) {
-    margin-bottom: 6rem;
+    margin-bottom: 4rem;
   }
 }
 
 @media only screen and (max-width: 56.25em) {
   .row {
-    max-width: 50rem;
-    padding: 0 3rem;
+    max-width: 90%;
+    padding: 0 1rem;
   }
 }
 
@@ -87,14 +87,14 @@ body {
   margin-right: 6rem;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media only screen and (max-width: 37.5em) {
   .row [class^="col-"]:not(:last-child) {
     margin-right: 0;
     margin-bottom: 6rem;
   }
 }
 
-@media only screen and (max-width: 56.25em) {
+@media only screen and (max-width: 37.5em) {
   .row [class^="col-"] {
     width: 100% !important;
   }
@@ -140,7 +140,22 @@ body {
   width: calc( 4 * ((100% - 4 * 6rem) / 5) + 3 * 6rem);
 }
 
+h1 {
+  margin: 2rem 1rem;
+}
+
 .card {
-  background-color: orangered;
+  background-image: -webkit-gradient(linear, left top, right top, from(#7ed56f), to(#28b485));
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
   height: 10rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 2rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
